--- a/services/simplemap.html
+++ b/services/simplemap.html
@@ -26,7 +26,7 @@
 
       function initMap() {
         map = new google.maps.Map(document.getElementById("map"), {
-          center: { lat:  51.180202, lng:  -115.565704},
+          center: { lat:  44.35012000, lng:  -78.73286000},
           zoom: 14,
         });
       }
