--- a/services/simplemap.html
+++ b/services/simplemap.html
@@ -26,7 +26,7 @@
 
       function initMap() {
         map = new google.maps.Map(document.getElementById("map"), {
-          center: { lat:  44.35012000, lng:  -78.73286000},
+          center: { lat:  44.35012000, lng: -73.935242},
           zoom: 14,
         });
       }
