--- a/story/storymap.html
+++ b/story/storymap.html
@@ -103,8 +103,8 @@
     <p>- Nishant Visited Dubai in the year 2023 during a 48-hour layover on the way to Canada for higher education.
     </p>
     <h3>Burj Khalifa</h3>
-    <p>-First stop was the iconic Burj Khalifa, the world's tallest high-rise with 160 floors and a height of 828 meters.</p>
-    <p>Impressed by the rapid ascent to the 124th floor in just one minute, symbolizing international cooperation and the progress of the Middle East.</p>
+    <p>-First stop was the iconic Burj Khalifa, the tallest building in the world, located in Dubai, UAE. It stands at 828 meters (2,717 feet) with 163 floors</p>
+    <p>Impressed by the rapid ascent to the 124th floor in just one minute, symbolizing international cooperation and the progress of the Middle East. The Burj Khalifa is known for its dynamic lighting displays and is an iconic symbol of Dubai.</p>
     <h3>The Palm Jumeirah</h3>
     <p>-Explored Palm Jumeirah, an artificial archipelago in the Persian Gulf, known as one of Dubai's famous landmarks.</p>
     <h3>The Dubai Mariana canal</h3>
