--- a/story/storymap.html
+++ b/story/storymap.html
@@ -31,6 +31,7 @@
       p{
         text-align: justify;
         margin-left: 10px;
+        margin-right: 10px;
       }
       h4{
         text-align: center;
